# aardvark

./: AGENTS.md  README.md  WB Coding Agent.spec  _artifact_paths.py  account.py  actions.py  agent.py  attachments.py  chat_input.py  chat_streams.py  chats.py  commit_ai.py  font_size_switcher.py  fullscreen_trigger.py  git_ops.py  mcp_servers.py  model_catalog.py  models.py  project_context.py  providers.py  pyproject.toml  streamlit_app.py  theme_switcher.py  tools.py  usage.py  wb_client.py
.streamlit/: config.toml
app_pages/: __init__.py  chat.py  docs.py  settings.py  usage.py
data/: LITELLM_REGISTRY_SHA.txt
scripts/: build_desktop.py  build_desktop.sh
