[project]
name = "wandb-streamlit-coding-agent"
version = "0.1.0"
description = "Streamlit code editing agent powered by W&B Inference"
requires-python = ">=3.11"
dependencies = [
    # 1.56.0+ is required for the ``on_dismiss=`` parameter on
    # ``@st.dialog`` — it's the only way to detect that the user closed a
    # modal via the built-in X / Esc / click-outside affordances and clear
    # our own ``ss.<dialog>_open`` gating flags. Without this, a dismissed
    # dialog re-opens on the very next rerun (e.g. when the user presses
    # Enter to send a chat message), because the gating flag is still True.
    "streamlit>=1.56.0",
    "openai>=1.40.0",
    # 0.52.24+ is required for ``kind=`` / ``color=`` kwargs on ``@weave.op``.
    # Older 0.52.x installs reject those kwargs with ``TypeError`` at module
    # import time. agent.py / tools.py / mcp_servers.py also include a runtime
    # ``_op`` shim that gracefully drops them on older weave, but we pin the
    # floor here so fresh installs get the proper Weave UI categorization.
    "weave>=0.52.24",
    "mcp>=1.19.0",
]

[project.optional-dependencies]
# Build-time-only dependencies for `scripts/build_desktop.py`. Install via
# `pip install -e '.[desktop]'` (or the uv equivalent) into a separate
# Python 3.12 venv: streamlit-desktop-app 0.3.4 caps Python at 3.12.
desktop = [
    "streamlit-desktop-app>=0.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["streamlit_app.py", "agent.py", "tools.py", "wb_client.py", "mcp_servers.py", "project_context.py", "chat_input.py", "theme_switcher.py"]
