[project]
name = "wandb-streamlit-coding-agent"
version = "0.1.0"
description = "Streamlit code editing agent powered by W&B Inference"
requires-python = ">=3.11"
dependencies = [
    # 1.56.0+ is required for the ``on_dismiss=`` parameter on
    # ``@st.dialog`` — it's the only way to detect that the user closed a
    # modal via the built-in X / Esc / click-outside affordances and clear
    # our own ``ss.<dialog>_open`` gating flags. Without this, a dismissed
    # dialog re-opens on the very next rerun (e.g. when the user presses
    # Enter to send a chat message), because the gating flag is still True.
    "streamlit>=1.56.0",
    # OpenAI SDK is used directly for: (1) the OpenAI native provider
    # (api.openai.com via the OpenAI-native client), (2) the 2
    # OpenAI-compat providers (W&B Inference, OpenRouter) — same SDK,
    # different ``base_url`` per provider, (3) the xAI native path
    # (xAI's REST endpoint is officially OpenAI-compatible per
    # docs.x.ai; we use the OpenAI SDK with ``base_url=https://api.x.ai/v1``
    # routed through a separate dispatch path so xAI-specific kwargs like
    # ``search_parameters`` for Live Search can flow through ``extra_body``
    # without entangling the openai_compat 2), and (4) ``model_catalog.py``
    # for ``/v1/models`` listing on every OpenAI-shape provider. The OpenAI
    # SDK is the single HTTP client library for the 4 OpenAI-shape
    # endpoints; native SDKs (anthropic, google-genai, mistralai) own the
    # other 3.
    "openai>=1.40.0",
    # Anthropic native SDK — unlocks prompt caching via ``cache_control``
    # blocks (~90% repeat-cost savings on every turn after the first when
    # the long system prompt is cached, applied automatically by
    # ``chat_streams._openai_messages_to_anthropic``), extended thinking
    # with typed thinking blocks, computer use / bash / text-editor
    # pre-built tools, and ``client.messages.count_tokens``.
    "anthropic>=0.40",
    # Google Gemini native SDK — unlocks grounding with Google Search
    # (per-chat opt-in toggle in the chat page), code execution,
    # ``client.caches.create`` for context caching, and native Imagen /
    # Veo for image / video generation.
    "google-genai>=1.0",
    # Mistral native SDK — Mistral's official Python client. Beyond
    # OpenAI-compat chat completions it exposes Mistral's full surface
    # (FIM completion via ``mistral.fim.complete``, ``mistral.embeddings``,
    # ``mistral.classifiers``, the agents API, and Magistral reasoning
    # options). The chat path uses ``mistral.chat.stream(...)`` whose
    # SSE chunks are OpenAI-shape-compatible, so the translator in
    # ``chat_streams._stream_mistral_native`` is mostly a passthrough
    # plus a couple of getattr-with-fallbacks for SDK-shape variance.
    "mistralai>=1.0",
    # pypdf — Phase 6 PDF text extraction for non-native-PDF providers
    # (everything except Anthropic Claude 3.5+ and Google Gemini 1.5+).
    # Pure Python, ~500KB, only invoked when a user attaches a PDF to a
    # model that can't handle PDFs natively.
    "pypdf>=5.0",
    # 0.52.24+ is required for ``kind=`` / ``color=`` kwargs on ``@weave.op``.
    # Older 0.52.x installs reject those kwargs with ``TypeError`` at module
    # import time. agent.py / tools.py / mcp_servers.py also include a runtime
    # ``_op`` shim that gracefully drops them on older weave, but we pin the
    # floor here so fresh installs get the proper Weave UI categorization.
    "weave>=0.52.24",
    "mcp>=1.19.0",
]

[project.optional-dependencies]
# Build-time-only dependencies for `scripts/build_desktop.py`. Install via
# `pip install -e '.[desktop]'` (or the uv equivalent) into a separate
# Python 3.12 venv: streamlit-desktop-app 0.3.4 caps Python at 3.12.
desktop = [
    "streamlit-desktop-app>=0.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "streamlit_app.py",
    "agent.py",
    "tools.py",
    "wb_client.py",
    "mcp_servers.py",
    "project_context.py",
    "chat_input.py",
    "theme_switcher.py",
    "providers.py",
    "chat_streams.py",
    "model_catalog.py",
    "fullscreen_trigger.py",
    "attachments.py",
    "_artifact_paths.py",
]
